--- a/sta/css/login.css
+++ b/sta/css/login.css
@@ -1,10 +1,7 @@
 body {
     background: #76b852;
     /* fallback for old browsers */
-    background: -webkit-linear-gradient(to top, #1f8f8f, #597bc7);
-    background: -moz-linear-gradient(to top, #1f8f8f, #597bc7);
-    background: -o-linear-gradient(to top, #1f8f8f, #597bc7);
-    background: linear-gradient(to top, #1f8f8f, #597bc7);
+    background-image: url(../images/bg.jpg);
     background-size: cover;
     background-attachment: fixed;
     margin: 0;
